src/jsgantt.css
/* Sample CSS for jsGanttImproved v1.8.0 */

div.gantt {
  font-family: tahoma, arial, verdana, Sans-serif;
  font-size: 12px;
  color: #656565;
}

.gantt table {
  border-collapse: collapse;
}

.gantt td {
  padding: 0px;
}

/* cell defaults */
.headweekends div {
  font-size: 8px;
  width: 100% !important;
  margin: 0;
}

.gmajorheading,
.gminorheading,
.gminorheadingwkend,
.gtaskcell,
.gtaskcellcurrent,
.gtaskcellwkend {
  height: 19px;
  font-size: 12px;
  border: #efefef 1px solid;
  text-align: center;
  cursor: default;
}

.gtasklist {
  height: 19px;
  min-width: 5px;
  max-width: 5px;
  width: 5px;
  border: #efefef 1px solid;
  border-right: none;
}

.gtasknolist-label {
  padding: 10px 50px;
}
/* all three width values set just to make sure - helps resizing code */

/* Additional values for some cell elements */

.gtaskheading,
.gmajorheading,
.gminorheading {
  background-color: #ffffff;
  font-weight: bold;
  font-size: 11px;
  white-space: nowrap;
}

.gtaskcellwkend,
.gtaskcellcurrent,
.gminorheadingwkend {
  background-color: #f7f7f7;
  font-weight: bold;
  font-size: 9px;
  white-space: nowrap;
}

.gtaskcellcurrent {
  background-color: #e1e0f7;
}

td.gtaskcell {
  text-align: left;
}

td.gspanning {
  border-left: none;
  border-right: none;
}

.gtaskcelldiv {
  position: relative;
}

/* Task list defaults */

.gtaskheading,
.gname,
.gtaskname,
.gres,
.gdur,
.gcomp,
.gstartdate,
.gplanstartdate,
.gplanenddate,
.gcost,
.genddate {
  height: 18px;
  white-space: nowrap;
  border: #efefef 1px solid;
}

.gtaskheading div,
.gname div,
.gtaskname div,
.gres div,
.gdur div,
.gcomp div,
.gstartdate div,
.gplanstartdate div,
.gplanenddate div,
.gcost div,
.genddate div {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.gtaskbarcontainer.gplan {
  position: absolute !important;
  top: 0px;
  opacity: 0.3;
  background: white;
  z-index: 10000;
  border: 1px solid black;
}

/* Additional values for some task list elements */

/* needed for IE8 */

.gstartdate div,
.gplanstartdate,
.gplanenddate,
.gstartdate,
.genddate {
  text-align: center;
  min-width: 105px;
  width: 105px;
  max-width: 105px;
  font-size: 10px;
}

.gtaskheading {
  text-align: center;
}

.gtaskname div,
/* needed for IE8 */

.gtaskname {
  min-width: 170px;
  max-width: 220px;
  width: 220px;
  font-size: 12px;
  border-left: none;
}

.gtaskheading,
.gtaskname {
  text-overflow: ellipsis;
  overflow: hidden;
}

.gtaskname.gtaskeditable div,
.gtaskname.gtaskeditable {
  overflow: unset;
}

.gselector {
  text-align: left;
  white-space: nowrap;
  min-width: 200px;
  max-width: 200px;
  width: 200px;
}

.gformlabel {
  position: relative;
  top: 0px;
  cursor: pointer;
  border: #ffffff 1px solid;
  margin-left: 2px;
  padding-left: 2px;
  padding-right: 2px;
}

span.gformlabel:hover,
span.gselected {
  background-color: #dbecff;
  border: #cccccc 1px solid;
}

span.gfoldercollapse {
  color: #000000;
  cursor: pointer;
  font-weight: bold;
  font-size: 12px;
  font-family: Courier, "Courier New", monospace;
}

.gtasktableh,
.gtasktable {
  border-right: #efefef 1px solid;
  width: 100%;
}

.gcharttableh,
.gtasktableh,
.gtasktable,
.gcharttable {
  border-collapse: collapse;
}

.gcharttable,
.gcharttableh {
  table-layout: fixed;
}

.gcharttable {
  border: #efefef 1px solid;
}

/* for some reason firefox needs this */

/* Differentiate Group, Milestone and Ordinary task items (applied to row) */

.ggroupitem {
  background-color: #fbfbfb;
  font-weight: bold;
}

.gmileitem,
.glineitem {
  background-color: #ffffff;
}

/* highlight row (applied to row) */

.gitemhighlight td {
  background-image: none;
  background-color: #fffde5;
}

.gitemdifferent td {
  background-image: none;
  background-color: rgba(0, 0, 0, 0.05);
}

/* task bar caption text styles */

.gmilecaption,
.ggroupcaption,
.gcaption {
  font-weight: normal;
  font-size: 9px;
  text-align: left;
  white-space: nowrap;
  top: 1px;
  position: absolute;
  top: 2px;
}

.ggroupcaption,
.gcaption {
  right: -126px;
}

/* Task complete %age bar shared attributes */

.gtaskcomplete {
  float: left;
  overflow: hidden;
}

/* Task complete %age bar */

.gtaskcomplete {
  height: 5px;
  background-color: #000000;
  margin-top: 4px;
  opacity: 0.4;
  filter: alpha(opacity=40);
}

/* Milestones */

.gmilestone {
  font-size: 14px;
  position: absolute;
  top: -2px;
}

.gmdtop {
  top: 2px;
  overflow: hidden;
  width: 0px;
  height: 0px;
  border-bottom: 5px solid black;
  border-left: 5px solid transparent;
  border-top: 5px solid transparent;
  border-right: 5px solid transparent;
}

.gmdbottom {
  top: 2px;
  overflow: hidden;
  width: 0px;
  height: 0px;
  border-top: 5px solid black;
  border-left: 5px solid transparent;
  border-bottom: 5px solid transparent;
  border-right: 5px solid transparent;
}

/* Task bar shared attributes */

.ggroupblack,
.gtaskblue,
.gtaskred,
.gtaskgreen,
.gtaskyellow,
.gtaskpurple,
.gtaskpink {
  height: 13px;
  filter: alpha(opacity=90);
  opacity: 0.9;
  margin-top: 1px;
}

/* Task bars - ggroupblack is set as the default class on the task if it is undefined */

.ggroupblack {
  height: 7px;
  background: #000000;
  margin-top: 2px;
}

.ggroupblackendpointleft {
  overflow: hidden;
  width: 0px;
  height: 0px;
  top: 2px;
  border-top: 4px solid black;
  border-left: 4px solid transparent;
  border-bottom: 4px solid transparent;
  border-right: 4px solid transparent;
  float: left;
}

.ggroupblackendpointright {
  overflow: hidden;
  width: 0px;
  height: 0px;
  top: 2px;
  border-top: 4px solid black;
  border-left: 4px solid transparent;
  border-bottom: 4px solid transparent;
  border-right: 4px solid transparent;
  float: right;
}

.ggroupblackcomplete {
  float: left;
  overflow: hidden;
  height: 3px;
  filter: alpha(opacity=80);
  opacity: 0.8;
  background-color: #777777;
  margin-top: 2px;
  margin-bottom: 2px;
}
/* ... */

